添加打赏和版权声明

--- a/themes/next/source/css/_common/components/post/post.styl
+++ b/themes/next/source/css/_common/components/post/post.styl
@@ -33,6 +33,18 @@
   transform: rotate(30deg);
 }
 
+.post-footer .copyright{
+  padding-top: 2em;
+  padding-left: 1em;
+  font-size: 12px;
+  line-height: 1em;
+  border:1px solid #ccc;
+  background:#f8f8f8;
+  p{
+    margin-top:-0.5em;
+  }
+}
+
 @import "post-expand";
 @import "post-collapse";
 @import "post-type";
