添加支付宝打赏与fix样式

--- a/themes/next/source/css/_common/_component/posts.styl
+++ b/themes/next/source/css/_common/_component/posts.styl
@@ -25,3 +25,14 @@
   -ms-transform: rotate(30deg);
   transform: rotate(30deg);
 }
+
+.post-footer .copyright{
+  padding-top: 1em;
+  padding-left: 1em;
+  font-size: 12px;
+  line-height: 1em;
+  border:1px solid #ccc;
+  p{
+    margin-top:-0.5em;
+  }
+}
