--- a/themes/next/source/css/_common/components/highlight/highlight.styl
+++ b/themes/next/source/css/_common/components/highlight/highlight.styl
@@ -7,7 +7,7 @@ $code-block {
   overflow: auto;
   margin: 20px 0;
   padding: 15px;
-  font-size $code-font-size;
+  font-size : $code-font-size;
   color: $highlight-foreground;
   background: $highlight-background;
   line-height: $line-height-code-block;
@@ -18,10 +18,10 @@ pre, code { font-family: $code-font-family; }
 code {
   padding: 2px 4px;
   word-break: break-all;
-  color: $code-foreground;
-  background: $code-background;
+  color: $my-code-foreground;
+  background: $my-code-background;
   border-radius: $code-border-radius;
-  font-size $code-font-size;
+  font-size : $code-font-size;
 }
 
 pre {
