修改代码块的样式

--- a/themes/next/source/css/_common/components/highlight/highlight.styl
+++ b/themes/next/source/css/_common/components/highlight/highlight.styl
@@ -9,7 +9,8 @@ $code-block {
   padding: 15px;
   font-size : $code-font-size;
   color: $highlight-foreground;
-  background: $highlight-background;
+  background: $my-highlight-background;
+  border:1px solid $my-highlight-border;
   line-height: $line-height-code-block;
 }
 
