--- a/themes/next/source/css/_variables/custom.styl
+++ b/themes/next/source/css/_variables/custom.styl
@@ -2,3 +2,12 @@
 $my-code-foreground = #c7254e
 //行内代码背景颜色
 $my-code-background = #f8f5ec
+//代码块背景颜色
+$my-highlight-background = #eee;
+//代码块border颜色
+$my-highlight-border = #ddd;
+
+//a标签的颜色
+$my-link-color = #0645ad;
+$my-link-hover-color = #06e;
+$my-a-visited = #0b0080;
