修改字体与超链接颜色

--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -1,1 +1,17 @@
 // Custom styles.
+body{
+	font-family: $my-font-family-base;
+}
+.post-body {
+	font-family: $my-font-family-base;
+}
+article a{
+	border-bottom: none;
+	color: $my-link-color;
+	&:hover {
+	    color: $my-link-hover-color;
+	}
+}
+.posts-expand .post-body ul li{
+	list-style: disc;
+}
