--- a/themes/next/source/css/_variables/custom.styl
+++ b/themes/next/source/css/_variables/custom.styl
@@ -1,3 +1,5 @@
+//字体
+$my-font-family-base = "Helvetica Neue","Helvetica","Microsoft YaHei","WenQuanYi Micro 	Hei",Arial,sans-serif
 //行内代码字体颜色
 $my-code-foreground = #c7254e
 //行内代码背景颜色
@@ -8,6 +10,5 @@ $my-highlight-background = #eee;
 $my-highlight-border = #ddd;
 
 //a标签的颜色
-$my-link-color = #0645ad;
-$my-link-hover-color = #06e;
-$my-a-visited = #0b0080;
+$my-link-color = #0d8abf;
+$my-link-hover-color = #29B4F0;
