--- a/themes/next/source/css/_common/scaffolding/base.styl
+++ b/themes/next/source/css/_common/scaffolding/base.styl
@@ -42,13 +42,13 @@ for headline in (1..6) {
 p { margin: 0 0 25px 0; }
 
 a {
-  color: $my-link-color;
+  color: $link-color;
   text-decoration: none;
   border-bottom: 1px solid $grey-dark;
   word-wrap: break-word;
 
   &:hover {
-    color: $my-link-hover-color;
+    color: $link-hover-color;
     border-bottom-color: $link-decoration-hover-color;
   }
 }
