--- a/themes/next/source/css/_variables/custom.styl
+++ b/themes/next/source/css/_variables/custom.styl
@@ -1,5 +1,6 @@
 //字体
 $my-font-family-base = "Helvetica Neue","Helvetica","Microsoft YaHei","WenQuanYi Micro 	Hei",Arial,sans-serif
+$my-font-family-posts = $my-font-family-base
 //行内代码字体颜色
 $my-code-foreground = #c7254e
 //行内代码背景颜色
