--- a/themes/next/source/css/_common/components/post/post.styl
+++ b/themes/next/source/css/_common/components/post/post.styl
@@ -1,5 +1,5 @@
 .post-body {
-  font-family: $my-font-family-posts;
+  font-family: $font-family-posts;
   +mobile() {
     word-break: break-word;
   }
