--- a/themes/next/source/css/_common/_core/scaffolding.styl
+++ b/themes/next/source/css/_common/_core/scaffolding.styl
@@ -10,7 +10,7 @@
 
 body {
   position: relative; // Required by scrollspy
-  font-family: $my-font-family-base;
+  font-family: $font-family-base;
   font-size: $font-size-base;
   line-height: $line-height-base;
   color: $text-color;
