--- a/themes/next/source/css/_variables/custom.styl
+++ b/themes/next/source/css/_variables/custom.styl
@@ -1,6 +1,9 @@
-//字体
-$my-font-family-base = "Helvetica Neue","Helvetica","Microsoft YaHei","WenQuanYi Micro 	Hei",Arial,sans-serif
-$my-font-family-posts = $my-font-family-base
+//字体:
+// 标题，修改成你期望的字体族
+$font-family-headings = Georgia, sans
+// 正文, 修改成你期望的字体族
+$font-family-base = "Helvetica Neue","Helvetica","Microsoft YaHei","WenQuanYi Micro 	Hei",Arial,sans-serif
+
 //行内代码字体颜色
 $my-code-foreground = #c7254e
 //行内代码背景颜色
