--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -21,3 +21,10 @@ article a{
 .ds-recent-comments{
 	padding-left:0;
 }
+//打赏样式
+#wechat p{
+	margin-top:-16px;
+}
+#alipay{
+	vertical-align:top;
+}
