--- a/themes/next/source/css/_variables/custom.styl
+++ b/themes/next/source/css/_variables/custom.styl
@@ -16,3 +16,10 @@ $my-highlight-border = #ddd;
 //a标签的颜色
 $my-link-color = #0d8abf;
 $my-link-hover-color = #29B4F0;
+
+//bootstrap的颜色
+$brand-primary = #428bca;
+$brand-success = #5cb85c;
+$brand-info =    #5bc0de;
+$brand-warning = #f0ad4e;
+$brand-danger =  #d9534f;
