开启不蒜子统计，优化about页面

--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -6,7 +6,7 @@
 a {
     border-bottom: none;
 }
-article a{
+article a, .about-page a{ // about页面下也用此样式
 	color: $my-link-color;
 	&:hover {
 	    color: $my-link-hover-color;
