更新关于我，删除无用友链与社交账号

--- a/themes/next/source/css/_schemes/Pisces/_sidebar.styl
+++ b/themes/next/source/css/_schemes/Pisces/_sidebar.styl
@@ -83,7 +83,7 @@
   //clearfix();
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
 
   .exturl {
     font-size: 13px;
